# drill

./: .gitignore  .rustfmt.toml  .travis.yml  CONTRIBUTING.md  Cargo.toml  README.md  SYNTAX.md  flake.nix
.github/workflows/: general.yml  release.yml
example/: README.md  assigns.yml  benchmark.yml  comments.yml  config.yml  cookies.yml  delay.yml  echo_chamber.yml  env.yml  exec-within-req.yaml  extreme.yml  headers.yml  http2.yml  iterations.yml  kaka.yml  subcomments.yml  subtags.yml  tags.yml  threads.yml  throughput.yml
example/fixtures/: .~lock.users.csv#  texts.txt  transactions.csv  users.csv
example/responses/: server.py
example/responses/api/: account  organizations
example/responses/api/users/: 1  2  70  73
example/server/: Dockerfile-example-server  docker-compose.yml  package-lock.json  package.json  server.js
example/server/responses/api/: account  organizations  users.json
example/server/responses/api/users/: 75
example/server/responses/api/users/at/1/: 404
example/server/responses/api/users/contacts/: 2  3
migrate/: jmeter.jmx
src/: benchmark.rs  checker.rs  cli.rs  config.rs  interpolator.rs  iteration.rs  lib.rs  main.rs  parser.rs  reader.rs  stats.rs  tags.rs  writer.rs
src/actions/: assert.rs  assign.rs  delay.rs  exec.rs  mod.rs  request.rs  ws_message.rs
src/expandable/: include.rs  mod.rs  multi_csv_request.rs  multi_exec.rs  multi_file_request.rs  multi_iter_request.rs  multi_request.rs
src/jmeter2drill/: jmeter.xsl  main.rs
