[package]
name = "drill"
version = "0.7.2"
authors = ["Ferran Basora <fcsonline@gmail.com>"]
description = "Drill is a HTTP load testing application written in Rust inspired by Ansible syntax"
repository = "https://github.com/fcsonline/drill"
keywords = ["performance", "http", "ansible", "jmeter"]
license = "GPL-3.0"
edition = "2018"

[dependencies]
clap = "2.32.0"
colored = "1.7.0"
csv = "1.0.5"
regex = "1.1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.39"
yaml-rust = "0.4.3"
url = "2.1.1"
linked-hash-map = "0.5.3"
tokio = { version = "0.2.20", features = ["rt-core", "rt-threaded", "time", "net", "io-driver"] }
reqwest = { version = "0.10.4", features = ["cookies", "trust-dns", "native-tls"] }
async-trait = "0.1.30"
futures = "0.3.5"
lazy_static = "1.4.0"
num_cpus = "1.13.0"
rand = "0.7.3"
hdrhistogram = "7.4.0"

# Add openssl-sys as a direct dependency so it can be cross compiled to
# x86_64-unknown-linux-musl using the "vendored" feature below
openssl = "0.10.35"

[features]
# Force openssl-sys to statically link in the openssl library. Necessary when
# cross compiling to x86_64-unknown-linux-musl.
vendored = ["openssl/vendored"]
